crates/leptos_csr_preload/tests/ui/lazy_invalid_preload_paths.stderr
error: expected square brackets
 --> tests/ui/lazy_invalid_preload_paths.rs:3:24
  |
3 | #[lazy(preload_paths = "/inventory")]
  |                        ^^^^^^^^^^^^
